[package]
name = "napi-jsonwebtoken"
authors = ["Chanakya <uchanakyasrinivas@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.3.1", default-features = false, features = ["napi4"] }
napi-derive = "2"
jsonwebtoken = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
